correzioni varie e aggiunta array link e collegamento

--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,11 @@
 .list-unstyled a{
     color: rgb(188, 186, 186);
 }
+
+nav li.active{
+    background: lightblue;
+}
+
+nav li:hover {
+  background: lightblue;
+}
